--- a/aplication/templates/admin/admin_start_page.html
+++ b/aplication/templates/admin/admin_start_page.html
@@ -2,73 +2,13 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        
         <title>Admin</title>
-        
-        <style>
-            body{
-                font-family: arial, sans-serif;
-            }
-            
-            .center {
-                margin: auto;
-                border: 3px solid #bebebe;
-                padding: 10px;
-                text-align: center;
-            }
+        <link rel="stylesheet" type="text/css" href="../../static/css/styles.css"/>
 
-            .pad{
-                padding-top: 10%;
-                padding-left: 30%;
-                padding-right: 30%;
-            }
-
-            .button-big {
-                border: none;
-                color: white;
-                padding: 20px 40px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 27px;
-                margin: 4px 2px;
-                transition-duration: 0.4s;
-                cursor: pointer;
-                background-color: #f1f1f1; 
-                color: black; 
-                }
-                
-            .button-big:hover {
-                background-color: rgb(80, 80, 80);
-                color: white;
-            }
-
-            .button {
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                transition-duration: 0.4s;
-                cursor: pointer;
-                background-color: #f1f1f1; 
-                color: black; 
-                border: 0px solid rgb(80, 80, 80);
-                }
-                
-            .button:hover {
-                background-color: rgb(80, 80, 80);
-                color: white;
-            }
-
-        </style>
     </head>
 
 
-    <body class="pad">
+    <body class="padlogin">
 
         <div class="center">
             <h1></h1>
