--- a/aplication/templates/customer/data_edit.html
+++ b/aplication/templates/customer/data_edit.html
@@ -3,79 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Edytuj dane</title>
-        
-        <style>
-            body{
-                font-family: arial, sans-serif;
-            }
-            
-            .center {
-                margin: auto;
-                border: 3px solid #bebebe;
-                padding: 10px;
-                text-align: center;
-            }
+        <link rel="stylesheet" type="text/css" href="../../static/css/styles.css"/>
 
-            .pad{
-                padding-top: 10%;
-                padding-left: 30%;
-                padding-right: 30%;
-            }
-
-            .button {
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                transition-duration: 0.4s;
-                cursor: pointer;
-                background-color: white; 
-                color: black; 
-                border: 2px solid rgb(80, 80, 80);
-                }
-                
-            .button:hover {
-                background-color: rgb(80, 80, 80);
-                color: white;
-            }
-
-            input {
-            border: 1px solid transparent;
-            background-color: #f1f1f1;
-            padding: 10px;
-            font-size: 16px;
-            }
-
-            input[type=text] {
-            background-color: #f1f1f1;
-            width: 30%;
-            }
-            input[type=password] {
-            background-color: #f1f1f1;
-            width: 30%;
-            }
-
-            input[type=submit] {
-            background-color: rgb(124, 124, 124);
-            color: #fff;
-            transition-duration: 0.4s;
-            cursor: pointer;
-            border: 2px solid rgb(80, 80, 80);
-            }
-
-            input[type=submit]:hover {
-                background-color: rgb(80, 80, 80);
-                border: 2px solid rgb(0, 0, 0);
-            }
-        </style>
     </head>
 
 
-    <body class="pad">
+    <body class="padlogin">
 
         <div class="center">
             <h1>Edytuj dane</h1>
@@ -101,8 +34,12 @@
                 <br><br>
 
                 <input class="button" type="submit" value="Edytuj">
-
               </form>
+
+              <br>
+            <a href="/profile_page">
+                <button class="button">Powrót</button>
+            </a>
         </div>
 
     </body>
