--- a/aplication/templates/customer/messages.html
+++ b/aplication/templates/customer/messages.html
@@ -2,87 +2,13 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        
-        <title>Logowanie</title>
-        
-        <style>
-            body{
-                font-family: arial, sans-serif;
-            }
-            
-            .center {
-                margin: auto;
-                border: 3px solid #bebebe;
-                padding: 10px;
-                text-align: center;
-            }
+        <title>Wiadomości</title>
 
-            .pad{
-                padding-top: 5%;
-                padding-bottom: 5%;
-                padding-left: 10%;
-                padding-right: 10%;
-            }
-
-            .button {
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                transition-duration: 0.4s;
-                cursor: pointer;
-                background-color: white; 
-                color: black; 
-                border: 2px solid rgb(80, 80, 80);
-                }
-                
-            .button:hover {
-                background-color: rgb(80, 80, 80);
-                color: white;
-            }
-
-            input {
-            border: 1px solid transparent;
-            background-color: #f1f1f1;
-            padding: 10px;
-            font-size: 16px;
-            }
-
-            input[type=text] {
-            background-color: #f1f1f1;
-            width: 30%;
-            }
-            input[type=password] {
-            background-color: #f1f1f1;
-            width: 30%;
-            }
-
-            input[type=submit] {
-            background-color: rgb(80, 80, 80);
-            color: #fff;
-            cursor: pointer;
-            }
-
-            input[type=submit] {
-            background-color: rgb(124, 124, 124);
-            color: #fff;
-            transition-duration: 0.4s;
-            cursor: pointer;
-            border: 2px solid rgb(80, 80, 80);
-            }
-            input[type=submit]:hover {
-                border: 2px solid rgb(0, 0, 0);
-            }
-
-        </style>
+        <link rel="stylesheet" type="text/css" href="../../static/css/styles.css"/>
     </head>
 
 
-    <body class="pad">
+    <body class="padmessages">
 
         <div class="center">
             <h1>Wiadomości</h1>
