--- a/aplication/templates/customer/offer.html
+++ b/aplication/templates/customer/offer.html
@@ -2,194 +2,16 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        
         <title>Oferta</title>
-        
-        <style>
-            body{
-                font-family: arial, sans-serif;
-                background-position: center bottom;
-                background-repeat: no-repeat;
-            }
 
-            .center {
-                margin: auto;
-                border: 3px solid #bebebe;
-                padding: 10px;
-                text-align: center;
-            }
-
-            .pad{
-                padding-left: 10%;
-                padding-right: 10%;
-            }
-
-            .menu{
-                text-align: right;
-                background-color: #f1f1f1;
-
-                position: -webkit-sticky; /* Safari */
-                position: sticky;
-                top: 0;
-            }
-
-            .button {
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                transition-duration: 0.4s;
-                cursor: pointer;
-                background-color: #f1f1f1; 
-                color: black; 
-                border: 0px solid rgb(80, 80, 80);
-                }
-                
-            .button:hover {
-                background-color: rgb(80, 80, 80);
-                color: white;
-            }
-
-            .buttontransparent {
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                transition-duration: 0.4s;
-                cursor: pointer;
-                background-color: rgba(255, 255, 255, 0); 
-                color: black; 
-                border: 2px solid rgb(80, 80, 80);
-                }
-                
-            .buttontransparent:hover {
-                background-color: rgb(80, 80, 80);
-                color: white;
-            }
-
-            /*the container must be positioned relative:*/
-            .autocomplete {
-                position: relative;
-                display: inline-block;
-            }
-
-            input {
-                border: 1px solid transparent;
-                background-color: #f1f1f1;
-                padding: 10px;
-                font-size: 16px;
-            }
-
-            input[type=text] {
-                background-color: #f1f1f1;
-                width: 100%;
-            }
-
-            select{
-                border: 1px solid transparent;
-                background-color: #f1f1f1;
-                padding: 10px;
-                font-size: 16px;
-            }
-
-            option{
-                border: 1px solid transparent;
-                background-color: #f1f1f1;
-                padding: 10px;
-                font-size: 16px;
-            }
-
-            input[type=submit] {
-                background-color: rgb(124, 124, 124);
-                color: #fff;
-                transition-duration: 0.4s;
-                cursor: pointer;
-                border: 2px solid rgb(80, 80, 80);
-            }
-
-            input[type=submit]:hover {
-                background-color: rgb(80, 80, 80);
-                border: 2px solid rgb(0, 0, 0);
-            }
-
-            .autocomplete-items {
-                position: absolute;
-                border: 1px solid #d4d4d4;
-                border-bottom: none;
-                border-top: none;
-                z-index: 99;
-                /*position the autocomplete items to be the same width as the container:*/
-                top: 100%;
-                left: 0;
-                right: 0;
-            }
-
-            .autocomplete-items div {
-                padding: 10px;
-                cursor: pointer;
-                background-color: #fff; 
-                border-bottom: 1px solid #d4d4d4; 
-            }
-
-            /*when hovering an item:*/
-            .autocomplete-items div:hover {
-                background-color: #e9e9e9; 
-            }
-
-            /*when navigating through the items using the arrow keys:*/
-            .autocomplete-active {
-                background-color: rgb(80, 80, 80) !important; 
-                color: #ffffff; 
-            }
-
-            table {
-                border-collapse: collapse;
-                width: 100%;
-            }
-
-            td, th {
-                border: 1px solid #dddddd;
-                text-align: left;
-                padding: 8px;
-            }
-
-            tr:nth-child(even) {
-                background-color: #f1f1f1;
-            }
-
-            #wrapper {
-                overflow: hidden;
-            }
-            #first {
-                float:left;
-            }
-            #second {
-                float: right;
-            }
-
-            img {
-                border: 5px solid #f1f1f1;
-            }
-
-            .centered-and-cropped { object-fit: cover }
-            
-
-        </style>
+        <link rel="stylesheet" type="text/css" href="../../static/css/styles.css"/>
     </head>
 
 
-    <body background="background2.png">
+    <body background="background2.png" class="norepeat">
 
         <div class="menu" id="wrapper">
-            <div id="first">
+            <div id="left">
                 <a href="/oferta" method="post">
                     <button class="button">Oferta</button></a>
                 <a href="/miasta" method="post">
@@ -198,14 +20,14 @@
                     <button class="button">O nas</button></a>
             </div>
 
-            <div id="second">
+            <div id="right">
                 $logowanie
             </div>
             
             
         </div>
         <br>
-        <div class="pad">
+        <div class="pad10">
             <div>
                 <h1>Samochody</h1>
                 <p>Wyszukaj samochód:</p>
