rezerwacje od strony użytkownika

--- a/aplication/templates/customer/car_info.html
+++ b/aplication/templates/customer/car_info.html
@@ -87,7 +87,7 @@
                     <br><br><br>
                     <a href="/oferta">
                         <button class="button">Powrót</button></a>
-                    <a href="/reserve_car" method="post" >
+                    <a href="/make_reservation?car_id=$carid" method="post" >
                             <button class="button">Zarezerwuj</button></a>
 
                 </div>
