--- a/aplication/templates/customer/make_reservation.html
+++ b/aplication/templates/customer/make_reservation.html
@@ -4,6 +4,17 @@
         <meta charset="utf-8">
         <title>Rezerwacja</title>
         <link rel="stylesheet" type="text/css" href="../../static/css/styles.css"/>
+         
+        <link rel="stylesheet" href="../../static/css/jquery-ui.css">
+        <script src="../../static/js/jquery-3.6.0.js"></script>
+        <script src="../../static/js/jquery-ui.js"></script>
+
+        <script>
+        $( function() {
+            $( "#start" ).datepicker();
+            $( "#end" ).datepicker();
+        } );
+        </script>
     
     </head>
 
@@ -33,10 +44,10 @@
                     <input type="hidden" id="user_id" name="user_id" value="$userid" >
 
                     <label for="start">Dzień rozpoczęcia</label><br>
-                    <input type="date" id="start" name="start"><br><br>
+                    <input type="text" id="start" name="start"><br><br>
 
                     <label for="end">Dzień zakończenia</label><br>
-                    <input type="date" id="end" name="end"><br><br>
+                    <input type="text" id="end" name="end"><br><br>
 
                     <input type="submit" value="Rezerwuj">
                 </form> 
@@ -51,7 +62,15 @@
 
 
         <script>
-            start.min = new Date().toISOString().split("T")[0];
+            //start.min = new Date().toISOString().split("T")[0];
+            var array = $excludedates
+            $('input').datepicker({
+                minDate: 0,
+                beforeShowDay: function(date){
+                    var string = jQuery.datepicker.formatDate('yy-mm-dd', date);
+                    return [$.inArray(string, array) == -1];
+                }
+            });
         </script>
     </body>
 </html>
