--- a/aplication/templates/customer/start_page.html
+++ b/aplication/templates/customer/start_page.html
@@ -4,6 +4,16 @@
         <meta charset="utf-8">
         <title>Strona główna</title>
         <link rel="stylesheet" type="text/css" href="../../static/css/styles.css"/>
+
+        <style>
+            .formatForButton {
+              background-color:red;
+             }
+
+            .formatForButton2 {
+              background-color:green;
+             }
+        </style>
     </head>
 
 
@@ -17,6 +27,8 @@
                     <button class="button">Miasta</button></a>
                 <a href="/oNas" method="post">
                     <button class="button">O nas</button></a>
+
+                <!-- <button type="button" id = "buttontochange" >Click Me!</button> -->
             </div>
 
             <div id="right">
@@ -39,6 +51,6 @@
         </div>
 
 
-        
+        <script src="/static/js/change_colour.js"></script>
     </body>
 </html>
