--- a/aplication/templates/customer/make_reservation.html
+++ b/aplication/templates/customer/make_reservation.html
@@ -96,7 +96,14 @@
         <script>
             
             var array = $excludedates
-            $('input').datepicker({
+            $('start').datepicker({
+                minDate: 0,
+                beforeShowDay: function(date){
+                    var string = jQuery.datepicker.formatDate('yy-mm-dd', date);
+                    return [$.inArray(string, array) == -1];
+                }
+            });
+            $('end').datepicker({
                 minDate: 0,
                 beforeShowDay: function(date){
                     var string = jQuery.datepicker.formatDate('yy-mm-dd', date);
