proba zrobienia websoketow

--- a/aplication/templates/customer/start_page.html
+++ b/aplication/templates/customer/start_page.html
@@ -5,6 +5,15 @@
         <title>Strona główna</title>
         <link rel="stylesheet" type="text/css" href="../../static/css/styles.css"/>
 
+        <style>
+            .formatForButton {
+              background-color:red;
+             }
+
+            .formatForButton2 {
+              background-color:green;
+             }
+        </style>
     </head>
 
 
@@ -19,6 +28,7 @@
                 <a href="/oNas" method="post">
                     <button class="button">O nas</button></a>
 
+                <!-- <button type="button" id = "buttontochange" >Click Me!</button> -->
             </div>
 
             <div id="right">
