--- a/aplication/templates/customer/login_page.html
+++ b/aplication/templates/customer/login_page.html
@@ -25,9 +25,14 @@
                 <input class="button" type="submit" value="Zaloguj">
             </form>
             <br>
+
+            <a href="/ocochodzi">
+                <button class="button">Zaloguj się przez Github</button></a>
+
+            <br>
+
             <a href="/">
-                <button class="button">Powrót</button>
-            </a>
+                <button class="button">Powrót</button></a>
         </div>
 
     </body>
