--- a/aplication/templates/customer/login_page.html
+++ b/aplication/templates/customer/login_page.html
@@ -26,7 +26,7 @@
             </form>
             <br>
 
-            <a href="/ocochodzi">
+            <a href="/githubauth">
                 <button class="button">Zaloguj się przez Github</button></a>
 
             <br>
