dodawanie do bazy uzytkownikow z github

--- a/aplication/templates/customer/profile_page.html
+++ b/aplication/templates/customer/profile_page.html
@@ -27,9 +27,7 @@
             <div class="center">
                 <h1>Mój profil</h1>
                 
-                <a href="/data_edit" method="post">
-                    <button class="button">Edytuj moje dane</button>
-                </a>
+                $dataeditbutton
 
                 <br>
                 <a href="/messages" method="post">
