role i zabezpurczenie przed wyświetlaniem bez zalogowania

--- a/aplication/templates/admin/admin_start_page.html
+++ b/aplication/templates/admin/admin_start_page.html
@@ -23,6 +23,10 @@
             <a href="admin/send_message">
                 <button class="button-big">Wyślij wiadomość</button>
             </a>
+            <br><br>
+            <a href="/">
+                <button class="button-big">Wyświetl strone jako klient</button>
+            </a>
         </div>
 
 
