--- a/aplication/templates/customer/profile_page.html
+++ b/aplication/templates/customer/profile_page.html
@@ -28,6 +28,7 @@
                 <h1>Mój profil</h1>
                 
                 $dataeditbutton
+                $adminpage
 
                 <br>
                 <a href="/messages" method="post">
