refaktoryzacja, poprawa wyswietlania informacji

--- a/aplication/templates/admin/send_message.html
+++ b/aplication/templates/admin/send_message.html
@@ -18,7 +18,7 @@
                 <input type="text" id="username" name="username">
                 <br><br>
                 <label for="content">Zawartość:</label><br>
-                <input type="text" id="content" name="content">
+                <textarea rows="8" cols="70" id="content" name="content"></textarea>
                 <br><br>
                 <input class="button" type="submit" value="Wyślij">
               </form>
