--- a/aplication/static/css/styles.css
+++ b/aplication/static/css/styles.css
@@ -165,6 +165,11 @@ input[type=password] {
     width: 30%;
 }
 
+textarea{
+    border: 1px solid transparent;
+    background-color: #f1f1f1;
+    font-size: 16px;
+}
 
 select{
     border: 1px solid transparent;
